--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "d3": "^7.2.1",
-    "tone": "^14.7.77"
+    "tone": "^14.7.77",
+    "tblswvs": "github:tablesandwaves/tblswvs.js#v0.4.0-alpha.3"
   }
 }
