--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "Stephen Meyer",
   "license": "MIT",
   "devDependencies": {
-    "esbuild": "^0.15.12"
+    "esbuild": "^0.25.6"
   },
   "dependencies": {
     "d3": "^7.2.1",
-    "tone": "^14.7.77",
-    "tblswvs": "github:tablesandwaves/tblswvs.js#v0.4.0-alpha.3"
+    "tblswvs": "0.21.1",
+    "tone": "14.7.77"
   }
 }
